devlorean-sgw/envoy.template.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/api/health" }
                redirect: { path_redirect: "/", response_code: MOVED_PERMANENTLY }
              - match: { safe_regex: { google_re2: {}, regex: ".*\\.[^/]+$" } }
                route:
                  cluster: cds_cluster
                  host_rewrite_literal: ${CDS_HOST}
              - match: { prefix: "/" }
                route:
                  cluster: web_cluster
                  host_rewrite_literal: ${WEB_HOST}
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: cds_cluster
    connect_timeout: 1s 
    type: STRICT_DNS 
    lb_policy: MAGLEV
    load_assignment:
      cluster_name: cds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: ${CDS_HOST}, port_value: ${CDS_PORT} }
  - name: web_cluster
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: MAGLEV
    load_assignment:
      cluster_name: web_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: ${WEB_HOST}, port_value: ${WEB_PORT} }
